--- a/Relacion06Ejer04/.project
+++ b/Relacion06Ejer04/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Relacion06Ejer04</name>
+	<name>Relacion06Ejer04-05</name>
 	<comment></comment>
 	<projects>
 	</projects>
