--- a/Relación13Ejer01/.project
+++ b/Relación13Ejer01/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Relación13Ejer01</name>
+	<name>Relacion13Ejer01</name>
 	<comment></comment>
 	<projects>
 	</projects>
